--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="/image/jogos-olimpicos.png" type="image/x-icon">
     <title>Olimpíadas</title>
 </head>
 <body>
